# libclog

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README  README.md  libclog.pc.in
examples/: README  README.md  error_function.c  file.c  log.txt  quiet.c  simple  simple.c  verbose.c
include/: clog.h
src/: clog.c
